--- a/css/default_style.css
+++ b/css/default_style.css
@@ -1,7 +1,7 @@
 /** 
-    Author: 
-    Course: 
-    Lesson: 
+    Author: Payeton Ross
+    Course: CIS133DA 10560
+    Lesson: 10
 **/
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -78,8 +78,30 @@ main {
     padding: 20px;
     width: 900px;
     box-sizing: border-box;
-    display: block;
+    display: flex;
     margin: 0 auto;
+    flex-wrap: wrap;
+}
+#card-wrap {
+    width: 75%;
+}
+.card {
+    background-color: white;
+    margin: 10px;
+    float: left;
+    width: 48%
+}
+img {
+    float: left;
+    background-color: #135367;
+    padding: 30px;
+    width: 100px;
+    margin-right: 16px;
+}
+h2, p {
+    margin: 0;
+    padding: 13px;
+    font-size: large;
 }
 
 /* Footer Styles */
