--- a/css/tablet_style.css
+++ b/css/tablet_style.css
@@ -3,16 +3,21 @@
     Course: CIS133DA 10560
     Lesson: 10
 **/
-/* Style sheet used at 900px breakpoint! */
+/* Style sheet used between 450px and 900px breakpoint! */
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
     margin: 0;
+    height: 100vh;
 }
-
+html, body {
+    height: 100vh;
+    width: 100vw;
+}
 #wrapper {
     background-color: #ddd;
     margin-top: 50px;
+    height: 100%;
 }
 
 /* Header Styles */
@@ -84,13 +89,13 @@ main {
     flex-wrap: wrap;
 }
 #card-wrap {
-    width: 75%;
+    width: 100%;
 }
 .card {
     background-color: white;
     margin: 10px;
     float: left;
-    width: 48%
+    width: 100%
 }
 img {
     float: left;
@@ -104,12 +109,16 @@ h2, p {
     padding: 13px;
     font-size: large;
 }
+
 /* Footer Styles */
 footer {
-    background-color: #2d3437;
+    background-color: #ba8743;
     color: white;
     padding: 20px;
     text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 footer a {
